@@ -7,6 +7,7 @@
 - 2020-05-26                                -
 ---------------------------------------------
 .: WSM: Task: Update Shop Validation (WSM-24)
+.: WSM: Task: Profile Uploader (WSM-38)
 
 ---------------------------------------------
 - 2020-05-25                                -
